# madori

./: CLAUDE.md  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
src/: app.rs  error.rs  event.rs  lib.rs  render.rs
